--- a/src/main/angular-bookstore/src/app/components/book-list/book-grid.component.html
+++ b/src/main/angular-bookstore/src/app/components/book-list/book-grid.component.html
@@ -1,13 +1,7 @@
 <div class="row">
   <div class="col-lg-3">
-    <div class="list-group">
-      <a routerLink="/category/1" class="list-group-item"
-        routerLinkActive="bg-primary text-white font-weight-bold">Web Devlopment</a>
-      <a routerLink="/category/2" class="list-group-item"
-        routerLinkActive="bg-primary text-white font-weight-bold">Programming</a>
-      <a routerLink="/category/3" class="list-group-item"
-        routerLinkActive="bg-primary text-white font-weight-bold">Database</a>
-    </div>
+    <app-book-category></app-book-category>
+
   </div>
   <br />
   <!-- /.col-lg-3 -->
