--- a/src/main/angular-bookstore/src/app/app.component.html
+++ b/src/main/angular-bookstore/src/app/app.component.html
@@ -9,16 +9,8 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
-          <div class="md-6">
-            <div class="row">
-              <div class="col-md-8">
-                <input type="" class="form-control" placeholder="Search books ">
-              </div>
-              <div class="col-md-2">
-                <button type="submit" class="btn btn-primary">Search</button>
-              </div>
-            </div>
-          </div>
+          <!-- this is for search  -->
+          <app-search></app-search>
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
               <a class="nav-link" href="#">Home
