--- a/src/main/angular-bookstore/src/app/components/book-list/book-grid.component.html
+++ b/src/main/angular-bookstore/src/app/components/book-list/book-grid.component.html
@@ -9,10 +9,10 @@
     <div class="row">
       <div class="col-lg-4 col-md-6 mb-4" *ngFor="let book of books">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top img-response" [src]="book.imageUrl"></a>
+          <a routerLink="/books/{{book.id}}"><img class="card-img-top img-response" [src]="book.imageUrl"></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">{{book.name}}</a>
+              <a routerLink="/books/{{book.id}}">{{book.name}}</a>
             </h4>
             <h5>{{book.unitPrice | currency: 'AOA'}}</h5>
             <p class="card-text text-truncate">{{book.description}}</p>
