--- a/src/main/angular-bookstore/src/app/components/search/search.component.html
+++ b/src/main/angular-bookstore/src/app/components/search/search.component.html
@@ -1,5 +1,5 @@
 <div class="md-12">
-  <div class="row">
+  <div class="row">g
     <div class="col-md-10">
       <input type="text" #searchInput 
       (keyup.enter)="searchBooks(searchInput.value)"
